[project]
name = "mlpm2025"
version = "0.1.0"
description = "Machine Learning for Predictive Maintenance 2025"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{name = "Amaury WEI"}]
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "gdown>=5.2.0",
    "gpustat>=1.1.1",
    "h5py>=3.14.0",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "matplotlib-venn>=1.1.2",
    "neptune>=1.14.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyreadr>=0.5.3",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "tensorflow>=2.16.1",
    "tensorflow-datasets>=4.9.9",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchinfo>=1.8.0",
    "torchvision==0.17.2",
    "tqdm>=4.67.1",
    "yacs>=0.1.8",
]

[project.urls]
Homepage = "https://moodle.epfl.ch/course/view.php?id=17052"
Repository = "https://github.com/EPFL-IMOS/MLPM2025"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", marker = "sys_platform == 'Darwin'"},
]
torchaudio = [
  { index = "torch-cpu", marker = "sys_platform == 'Darwin'"},
]
torchvision = [
  { index = "torch-cpu", marker = "sys_platform == 'Darwin'"},
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
